Readme test for github

--- a/README
+++ b/README
@@ -1,7 +1,4 @@
-#summary Frequently Asked Questions
-#labels Featured
-
-= What is this? =
+#What is this?
 
 tldr:
 PPS is a Fractured Soldat statistics and ranking system that intends to help players improve. Smoothly.
